@@ -9,7 +9,9 @@ module ActiveRecord
     USE_ARJDBC_WORKAROUND = defined?(ArJdbc)
 
     class AbstractAdapter
-      def views
+      # used to be called views but that can clash with gems like schema_plus
+      # this gem is not meant to be exposing such an extra interface any way
+      def database_cleaner_view_cache
         @views ||= select_values("select table_name from information_schema.views where table_schema = '#{current_database}'") rescue []
       end
 
@@ -142,7 +144,7 @@ module DatabaseCleaner::ActiveRecord
     private
 
     def tables_to_truncate(connection)
-      (@only || connection.database_cleaner_table_cache) - @tables_to_exclude - connection.views
+      (@only || connection.database_cleaner_table_cache) - @tables_to_exclude - connection.database_cleaner_view_cache
     end
 
     # overwritten
